--- a/frontend/src/features/date/presentation/historyList/HistoryListEntryShort.module.scss
+++ b/frontend/src/features/date/presentation/historyList/HistoryListEntryShort.module.scss
@@ -332,8 +332,8 @@ $list-entry-border: $color-cart-list-border;
   top: 0.15rem;
   left: 0.15rem;
   z-index: 1;
-  width: 0.55rem;
-  height: 0.55rem;
+  width: 0.625rem;
+  height: 0.625rem;
   border-radius: 50%;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.28);
 
@@ -373,8 +373,8 @@ $list-entry-border: $color-cart-list-border;
 .root[data-density-level='3'] .statusIndicator {
   top: 0.1rem;
   left: 0.1rem;
-  width: 0.45rem;
-  height: 0.45rem;
+  width: 0.5rem;
+  height: 0.5rem;
 }
 
 .root[data-inactive='true'] .statusIndicator {
